# keyracer

./: arm-deploy.sh  kubernetes-deployement.yaml  multiarch-fix.sh  x86-deploy.sh
.github/workflows/: build-api.yml  build-frontend.yml
frontend/: .Dockerfile  \  arm-deploy.sh  f:w  package-lock.json  package.json  pnpm-lock.yaml  x86-deploy.sh  x86.Dockerfile
frontend/src/: app.html
frontend/src/lib/: stores.ts  types.ts  utils.ts
frontend/src/lib/components/: CustomThemeColor.svelte  Header.svelte  KeyracerCaret.svelte  KeyracerInput.svelte  KeyracerStats.svelte  RankingHistory.svelte  SettingsMenu.svelte  input.ts
frontend/src/lib/components/Input/: KeyracerCaret.svelte  KeyracerInput.svelte
frontend/src/lib/components/SettingsMenu/: CustomThemeColor.svelte  SettingsIcon.svelte  SettingsMenu.svelte  settingsUtils.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/account/: +page.svelte
frontend/src/routes/ranked/: +page.server.ts  +page.svelte
frontend/src/routes/user/: +page.server.ts  +page.svelte
frontend/src/routes/user/[id]/: +page.server.ts  +page.svelte
keyracer_server/: Cargo.toml  arm-deploy.sh  arm.Dockerfile  certs.json  words_list.txt  x86-deploy.sh  x86.Dockerfile
keyracer_server/src/: lib.rs  main.rs  structs.rs  utils.rs
keyracer_server/src/endpoints/: auth.rs  data.rs  ranked.rs  results.rs  test.rs
