[package]
name = "keyracer_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
anyhow = "1.0.68"
awc = { version = "3.1.0", features = ["rustls"] }
base64 = "0.21.0"
dotenv = "0.15.0"
idgenerator = "2.0.0"
jsonwebtoken = "8.2.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-actix-native-tls"] }
